# modern-datastack

./: .gitignore  README.md  pyproject.toml
cloned/dagster-poor-mans-data-lake/dagster_env/: pyvenv.cfg
cloned/dagster-poor-mans-data-lake/jaffle/: __init__.py
cloned/dagster-poor-mans-data-lake/jaffle/assets/: __init__.py
cloned/dagster-poor-mans-data-lake/jaffle_tests/: test_assets.py
cloned/dagster-poor-mans-data-lake/tmp70boli68/.telemetry/: id.yaml
cloned/dagster-poor-mans-data-lake/tmp70boli68/history/: runs.db
cloned/dagster-poor-mans-data-lake/tmp70boli68/history/runs/: 7d1f7142-4eb9-49c3-9020-13d9bc47dd2a.db  index.db
cloned/dagster-poor-mans-data-lake/tmp70boli68/schedules/: schedules.db
cloned/dagster-poor-mans-data-lake/tmp70boli68/storage/7d1f7142-4eb9-49c3-9020-13d9bc47dd2a/compute_logs/: alwxovhz.err  fyehlyap.err  hzqclaow.err  wivlquxf.err
cloned/dagster-poor-mans-data-lake/tmpfvxgqxr7/history/: runs.db
cloned/dagster-poor-mans-data-lake/tmpfvxgqxr7/history/runs/: 25db84ff-fdab-45d8-9c1b-6f09b767a9b3.db  3977419c-f651-4141-a353-d64e5b222c0f.db  index.db
cloned/dagster-poor-mans-data-lake/tmpfvxgqxr7/schedules/: schedules.db
cloned/dagster-poor-mans-data-lake/tmpfvxgqxr7/storage/25db84ff-fdab-45d8-9c1b-6f09b767a9b3/compute_logs/: kangbhyk.err  lqarptdy.err  (+2 more)
jaffle/: pyproject.toml  setup.py
jaffle/jaffle/: assets.py
jaffle/jaffle_tests/: test_assets.py
localstack/: docker-compose.yml  wait-for-s3.sh
play_dagster/: README.md  setup.cfg  setup.py  workspace.yaml
play_dagster/play_dagster/: __init__.py  repository.py
(+9 files in other folders)
