[tool.poetry]
name = "modern-datastack"
version = "0.1.0"
description = "coolest and newest data tools"
authors = ["Anton Peniaziev <antonpeniaziev@gmail.com>"]
readme = "README.md"
packages = [{include = "modern_datastack"}]

[tool.poetry.dependencies]
python = "^3.8"
dagster = "^1.1.7"

[tool.poetry.group.dev.dependencies]
localstack = "^1.2.0"
awscli = "^1.27.42"
awscli-local = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
